--- a/daily/2022-6-7(1).md
+++ b/daily/2022-6-7(1).md
@@ -4,9 +4,18 @@
 ## llvm的语法知识（笔记）
 > %3 = alloca i32 ;为%3分配i32的空间
 
-## [CPU是如何读写内存的](https://zhuanlan.zhihu.com/p/522038503)
-1.
-2.
-3.
-
-## [markdown语法](https://markdown.com.cn/basic-syntax/)
+## CPU是如何读写内存的
+[学习连接](https://zhuanlan.zhihu.com/p/522038503)
+1. 程序和数据一视同仁，都存放在内存中
+    * 程序执行过程中需要读写来自内存中的数据
+    * CPU需要访问内存读取下一条要执行的机器指令
+2. CPU执行一条涉及内存读写指令时需要等“很长一段时间“数据才能”缓缓的“从内存读取到CPU中，在这种情况你还认为CPU应该直接读写内存吗？
+    * 我们把经常用到的数据放到cache中存储，CPU访问内存时首先查找cache，如果命中，直接返回即可，找不到再去查找内存并更新cache。  
+    ![image](https://github.com/oozhuzaioo/record-learning/blob/main/images/6-7(CPU-CACHE).jpg)
+    * 异步更新缓存:当CPU写内存时，直接更新cache,cache被剔除放回内存时，再更新内存。
+3. 多级cache
+    * 现代CPU为了增加CPU读写内存性能，已经在CPU和内存之间增加了多级cache
+4. 多核，多问题  
+    ![image](https://github.com/oozhuzaioo/record-learning/blob/main/images/6-7(mutli-core).jpg)
+## markdown语法
+[学习连接](https://markdown.com.cn/basic-syntax/)
