--- a/daily/2022-6-7(1).md
+++ b/daily/2022-6-7(1).md
@@ -5,7 +5,7 @@
 > %3 = alloca i32 ;为%3分配i32的空间
 
 ## CPU是如何读写内存的
-[学习连接](https://zhuanlan.zhihu.com/p/522038503)
+[链接地址](https://zhuanlan.zhihu.com/p/522038503)
 1. 程序和数据一视同仁，都存放在内存中
     * 程序执行过程中需要读写来自内存中的数据
     * CPU需要访问内存读取下一条要执行的机器指令
@@ -18,4 +18,4 @@
 4. 多核，多问题  
     ![image](https://github.com/oozhuzaioo/record-learning/blob/main/images/6-7(mutli-core).jpg)
 ## markdown语法
-[学习连接](https://markdown.com.cn/basic-syntax/)
+[链接地址](https://markdown.com.cn/basic-syntax/)
