--- a/daily/2022-6-13(3).md
+++ b/daily/2022-6-13(3).md
@@ -2,7 +2,7 @@
 2022-6-13
 
 ## tensorflow中的动态与静态shape
-[链接地址](https://www.cnblogs.com/mtcnn/p/9411708.html）
+[链接地址](https://www.cnblogs.com/mtcnn/p/9411708.html)
 [链接地址2](http://lunarnai.cn/2018/03/28/tensorflow_shape/)
 1. 静态形状是由我们的操作推断出的形状(inferred)，而动态形状是运行时真实的形状。
     * 静态是构建时的shape， 动态是运行时的shape
