<daily>: add 8-8 and modify 8-2

--- a/daily/2022-8-2(8).md
+++ b/daily/2022-8-2(8).md
@@ -1,7 +1,7 @@
 # 今日总结
 2022-8-2
 
-## Eigen库（SOLID原则）
+## Eigen库  
 1. what is Eigen?  
 [官方文档](http://eigen.tuxfamily.org/dox/modules.html)  
     * Eigen 是C++语言里的一个开源模版库，支持线性代数运算，矩阵和矢量运算，数值分析及其相关的算法。
